--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,19 +1,3 @@
-# ASP.NET Core (.NET Framework)
-# Build and test ASP.NET Core projects targeting the full .NET Framework.
-# Add steps that publish symbols, save build artifacts, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
-
-trigger:
-- master
-
-pool:
-  vmImage: 'windows-latest'
-
-variables:
-  solution: '**/*.sln'
-  buildPlatform: 'Any CPU'
-  buildConfiguration: 'Release'
-
 stages:
 - stage: build
   displayName: 'Build stage'
@@ -39,17 +23,24 @@ stages:
         platform: '$(buildPlatform)'
         configuration: '$(buildConfiguration)'
 
+    # Publish artifact step to make the zip file available to the next stage
+    - task: PublishBuildArtifacts@1
+      inputs:
+        artifactName: 'WebAppArtifact'
+        targetPath: '$(build.artifactStagingDirectory)'
 - stage: Deploy
   displayName: 'Deploy Stage'
   jobs:
   - job: DeployJob
     displayName: 'Deploy Job'
     steps:
+      # Download the artifact (make sure the artifact name matches)
       - task: DownloadBuildArtifacts@1
         inputs:
           buildType: 'current'
           downloadType: 'specific'
           downloadPath: '$(System.ArtifactsDirectory)'
+          artifactName: 'WebAppArtifact'  # Make sure this matches the artifact name used in the build stage
 
       # Azure Web App Deployment
       - task: AzureRmWebAppDeployment@4
@@ -58,4 +49,4 @@ stages:
           azureSubscription: 'Free Trial(35c05a47-103a-44b2-8f45-0e9355285917)'  # Ensure subscription name is correct
           appType: 'webApp'
           WebAppName: 'demosaiappweb'
-          packageForLinux: '$(System.ArtifactsDirectory)/**/*.zip'
+          packageForLinux: '$(System.ArtifactsDirectory)/WebAppArtifact/**/*.zip'  # Correct the path to point to the downloaded zip file
