--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,3 +1,14 @@
+trigger:
+- master
+
+pool:
+  vmImage: 'windows-latest'
+
+variables:
+  solution: '**/*.sln'
+  buildPlatform: 'Any CPU'
+  buildConfiguration: 'Release'
+  
 stages:
 - stage: build
   displayName: 'Build stage'
